[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets novos/SalaDaSecretaria.jpg" type="Texture" id=1]
[ext_resource path="res://Assets novos/circle blur more.png" type="Texture" id=2]
[ext_resource path="res://Assets novos/Caminhoneiro1.png" type="Texture" id=3]
[ext_resource path="res://Assets novos/Caminhoneiro2.png" type="Texture" id=4]
[ext_resource path="res://Assets novos/secretariaSentada.png" type="Texture" id=5]
[ext_resource path="res://Scripts/salaDaSecretaria.gd" type="Script" id=6]
[ext_resource path="res://Assets novos/caminhoneiro1Pronto.png" type="Texture" id=7]
[ext_resource path="res://Assets novos/caminhoneiro2Pronto.png" type="Texture" id=8]
[ext_resource path="res://Assets novos/PixelSplitter-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets novos/caminhoneira.png" type="Texture" id=10]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.901961 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "voltandoAoNormal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.980392 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 9 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="SalaDaSecretaria" type="Sprite" parent="."]
position = Vector2( 964, 538 )
texture = ExtResource( 1 )

[node name="SecretariaSentada" type="Sprite" parent="."]
visible = false
position = Vector2( 1185, 449 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.901961 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/RESET = SubResource( 2 )
anims/voltandoAoNormal = SubResource( 1 )

[node name="caminhoneiro1" type="TextureButton" parent="."]
light_mask = 0
margin_left = 112.0
margin_top = 291.0
margin_right = 970.0
margin_bottom = 2586.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="caminhoneiro1"]
position = Vector2( 423.333, 1156.67 )
scale = Vector2( 1, 2 )
texture = ExtResource( 2 )
texture_scale = 8.0
energy = 1.5

[node name="caminhoneiro2" type="TextureButton" parent="."]
light_mask = 0
margin_left = 595.0
margin_top = 275.0
margin_right = 756.0
margin_bottom = 730.0
rect_scale = Vector2( 1.55, 1.55 )
texture_normal = ExtResource( 8 )

[node name="Light2D" type="Light2D" parent="caminhoneiro2"]
light_mask = 2
position = Vector2( 81.9377, 240 )
scale = Vector2( 0.193548, 0.387097 )
texture = ExtResource( 2 )
texture_scale = 8.0
energy = 1.5

[node name="Caminhoneira" type="TextureButton" parent="."]
light_mask = 0
margin_left = 871.0
margin_top = 206.0
margin_right = 2011.0
margin_bottom = 1518.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 10 )

[node name="Light2D" type="Light2D" parent="Caminhoneira"]
light_mask = 2
position = Vector2( 551.667, 696.667 )
scale = Vector2( 0.499999, 1 )
texture = ExtResource( 2 )
texture_scale = 8.0
energy = 1.5

[node name="caminhoneiro1Selecionado" type="Sprite" parent="."]
visible = false
position = Vector2( 394, 396 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="caminhoneiro2Selecionado" type="Sprite" parent="."]
visible = false
position = Vector2( 328, 735 )
scale = Vector2( 1.55, 1.55 )
texture = ExtResource( 4 )

[node name="selecionarPersonagem" type="Label" parent="."]
margin_top = 34.0
margin_right = 1920.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
text = "Selecione um personagem"
align = 1

[node name="caminhoneiraSelecionada" type="Sprite" parent="."]
visible = false
position = Vector2( 335, 703 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 10 )

[connection signal="mouse_entered" from="caminhoneiro1" to="." method="_on_Caminhoneiro1_mouse_entered"]
[connection signal="mouse_exited" from="caminhoneiro1" to="." method="_on_Caminhoneiro1_mouse_exited"]
[connection signal="pressed" from="caminhoneiro1" to="." method="_on_Caminhoneiro1_pressed"]
[connection signal="mouse_entered" from="caminhoneiro2" to="." method="_on_caminhoneiro2_mouse_entered"]
[connection signal="mouse_exited" from="caminhoneiro2" to="." method="_on_caminhoneiro2_mouse_exited"]
[connection signal="pressed" from="caminhoneiro2" to="." method="_on_caminhoneiro2_pressed"]
[connection signal="mouse_entered" from="Caminhoneira" to="." method="_on_Caminhoneira_mouse_entered"]
[connection signal="mouse_exited" from="Caminhoneira" to="." method="_on_Caminhoneira_mouse_exited"]
[connection signal="pressed" from="Caminhoneira" to="." method="_on_Caminhoneira_pressed"]
